<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">food_app</string>
    <string name="title_activity_add_review">AddReview</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dish_name">Dish Name</string>
    <string name="restuarant_name">Restaurant Name</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_reviews">Reviews</string>
    <string name="title_activity_wishlist">Wishlist</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="add">+</string>
    <string name="login">Login</string>
    <string name="ate">Ate It!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="title_activity_comments_adapter">CommentsAdapter</string>
    <string name="title_activity_test_screen">TestScreen</string>
    <string name="title_activity_comment_adapter">CommentAdapter</string>
    <string name="title_activity_add_to_wishlist">AddToWishlist</string>
    <string name="enter_rest_name">Enter restaurant name</string>
    <string name="enter_dish_name">Enter dish name</string>
    <string name="addToWishlist">Add to wishlist</string>
    <string name="Search">Search</string>
    <string name="enterItemToSearch">Enter item to search</string>
    <string name="Food_app">Food   app</string>
    <string name="postal_code">Postal Code</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="address">Address</string>

    <color name="light_gray">#808080</color>

    <string name="Wishlist">Wishlist</string>
    <string name="Restaurants">Restaurants</string>
    <string name="dishes">Dishes</string>

    <color name="light_blue">#ADD8E6</color>
    <color name="harvest_gold">#EDE275</color>
    <color name="Green_yellow">#B1FB17</color>

    <string name="add_review">Add Review</string>
    <string name="title_activity_restaurant">Restaurant</string>
    <string name="enterRestuarantname">Enter Restuarant Name</string>
    <string name="title_activity_add_restaurant">AddRestaurant</string>
    <string name="enterDishname">Enter Dish Name</string>
    <string name="Dishlist">Dish List</string>
    <string name="review">Reviews</string>
    <string name="addDish">Add Dish</string>
    <string name="nameLabel">Restaurant Name:</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="plus">+</string>
    <string name="home">Home</string>
    <string name="spent">Spent</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_spent">Spent</string>
    <string name="title_activity_wish_list_item_view">WishListItemView</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

</resources>
