<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/reviewscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_add_review" />

    <EditText
        android:id="@+id/restname"
        android:hint="@string/restuarant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/reviewscreen"
        android:layout_marginRight="21dp"
        android:text="@string/restuarant_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
        android:id="@+id/submitButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="81dp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category"
        android:layout_marginTop="22dp"
        android:layout_toLeftOf="@+id/submitButt"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description"
        android:layout_below="@+id/price"
        android:layout_marginTop="25dp"
        android:text="@string/catergory"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dishname"
        android:layout_below="@+id/dishname"
        android:layout_marginTop="26dp"
        android:text="@string/price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/dishname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/restname"
        android:layout_below="@+id/rating"
        android:layout_marginTop="38dp"
        android:text="@string/dish_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</RelativeLayout>
