<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Restaurant" >

    <Button
        android:id="@+id/addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/add_restaurant" />
    
    <EditText
        android:id="@+id/restnames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
       	android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/restuarant_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_alignLeft="@+id/restnames"
       	android:layout_below="@+id/restnames"
       	android:layout_marginTop="20dp"
        android:hint="@string/address"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/postal_code"
        android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_alignLeft="@+id/address"
       	android:layout_below="@+id/address"
       	android:layout_marginTop="20dp"
        android:hint="@string/postal_code"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
