<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#1a1a1a"
        android:scrollbars="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Home"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="goToMain"
                android:text="@string/home" />

            <Button
                android:id="@+id/wishlist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="goToWishlist"
                android:text="@string/Wishlist" />

            <Button
                android:id="@+id/Search"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Search"
                android:onClick="goToSearch" />

            <Button
                android:id="@+id/Spent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/spent"
                android:onClick="goToSpent" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6082b6"
        android:orientation="horizontal"
        android:paddingBottom="20dp" >

        <Button
            android:id="@+id/addDish"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="15dp"
            android:background="#1a1a1a"
            android:onClick="goToAddDishes"
            android:text="@string/plus"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="temp button for until grid is done"
            android:onClick="goToDishView"/>

    </LinearLayout>

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/header"
        android:layout_above="@+id/horizontalScrollView1"
        android:numColumns="3" >
    </GridView>

</RelativeLayout>