<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddToWishlist" >

    <EditText
        android:id="@+id/restaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/enter_rest_name" />

    <EditText
        android:id="@+id/nameOfDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/restaurantName"
        android:layout_alignLeft="@+id/restaurantName"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/enter_dish_name" />

    <Button
        android:id="@+id/submitToWishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/restaurantName"
        android:layout_alignRight="@+id/restaurantName"
        android:layout_below="@+id/restaurantName"
        android:layout_marginTop="68dp"
        android:text="@string/submit" />

</RelativeLayout>