<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Reviews" >

    <Button
        android:id="@+id/add_food"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/add" />

    <Button
        android:id="@+id/login"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/add_food"
        android:text="@string/login" />

    <TextView
        android:id="@+id/food_name_rev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_food"
        android:layout_below="@+id/add_food"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="21dp"
        android:hint="dish name_rev"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/restaurant_name_rev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/food_name_rev"
        android:layout_below="@+id/food_name_rev"
        android:hint="restaurant name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/rating_rev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/restaurant_name_rev"
        android:layout_below="@+id/restaurant_name_rev"
        android:hint="rating"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/ateit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login"
        android:layout_alignTop="@+id/food_name_rev"
        android:layout_marginRight="14dp"
        android:text="@string/ate" />

    <ListView
        android:id="@+id/comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_food"
        android:layout_below="@+id/rating_rev"
        android:layout_marginTop="14dp" >
    </ListView>

</RelativeLayout>
